[metadata]
name = isshub_sync
description = Sync library for Isshub
long_description = file:README.rst
version = 0.0.1.dev0
author = Stéphane "Twidi" Angel
author_email = s.angel@twidi.com
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Framework :: Django
    Framework :: Django :: 2.0
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
keywords =
    github
    gitlab
    bitbucket
    sync
    aiohttp
url = https://github.com/Isshub-io/isshub_sync
requires-python = >=3.6

[options]
zip_safe = True
packages = find:
install_requires =
    aiodns
    aiohttp
    cchardet

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    ipython
    mypy
    prospector-fixes-232[with_pyroma]
    pylint
    pytest
    pytest-aiohttp
    pytest-cov
    pytest-mock
    wheel

[bdist_wheel]
universal = 1

[mypy]
ignore_missing_imports = true

[mypy-isshub_sync.settings]
ignore_errors = True

[tool:pytest]
addopts =
    --cov=isshub_sync
    --cov-branch
    --cov-report term-missing
    --doctest-modules
    --ignore setup.py
    --pyargs
